package edu.fiuba.algo3.modelo.Direccion;

public interface Direccion {
    int moverFila(int fila);
    int moverColumna(int columna);

}
